[gd_scene load_steps=35 format=3 uid="uid://6w6xa8eigkmh"]

[ext_resource type="Theme" uid="uid://ccbn336iigwja" path="res://barkley2/themes/utility_station.tres" id="1_q06lk"]
[ext_resource type="Script" uid="uid://bl7uj0811qdf1" path="res://barkley2/scenes/_utilityStation/gun_info_panel.gd" id="2_73g5n"]
[ext_resource type="FontFile" uid="uid://bmt3s8i84e3xl" path="res://barkley2/resources/fonts/fn1.tres" id="3_e4xnj"]
[ext_resource type="PackedScene" uid="uid://co4ay6skaan73" path="res://barkley2/scenes/_utilityStation/panel_gun_sel.tscn" id="4_2jdfv"]
[ext_resource type="FontFile" uid="uid://bkx4jb55yvtqy" path="res://barkley2/resources/fonts/fn_12ocs.tres" id="6_vqswr"]
[ext_resource type="Texture2D" uid="uid://skgcdpe1ctna" path="res://barkley2/assets/b2_original/images/merged/sMenuUtilityGunMapMarker.png" id="8_irctk"]
[ext_resource type="Texture2D" uid="uid://e2xplnp0wlm6" path="res://barkley2/assets/b2_original/images/merged/sMenuGunIcon.png" id="9_fpauw"]
[ext_resource type="FontFile" uid="uid://c5asr1c5g1w6h" path="res://barkley2/resources/fonts/fn_small.tres" id="10_kur3p"]
[ext_resource type="Script" uid="uid://c33j1ok2mwock" path="res://barkley2/resources/B2_Weapon/lineage_underline_label.gd" id="11_kbkgw"]
[ext_resource type="Texture2D" uid="uid://iw7nigjpkcvt" path="res://barkley2/assets/b2_original/images/merged/sMenuUtilitySmelt.png" id="12_73g5n"]
[ext_resource type="FontFile" uid="uid://drr75gc00ws56" path="res://barkley2/resources/fonts/fn1b.tres" id="12_kbo01"]
[ext_resource type="FontFile" uid="uid://dre1af5ictbg8" path="res://barkley2/resources/fonts/fn_7ocs.tres" id="13_anb8u"]
[ext_resource type="Texture2D" uid="uid://clxa0bsdrci0" path="res://barkley2/assets/b2_original/images/merged/sMenuUtilitySmeltText.png" id="13_e4xnj"]
[ext_resource type="FontFile" uid="uid://0wckh5gc5ai6" path="res://barkley2/resources/fonts/smelt.tres" id="14_gwqpq"]

[sub_resource type="LabelSettings" id="LabelSettings_6w61b"]
font = ExtResource("3_e4xnj")

[sub_resource type="AtlasTexture" id="AtlasTexture_tn1ex"]
atlas = ExtResource("8_irctk")
region = Rect2(9, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyqur"]
atlas = ExtResource("8_irctk")
region = Rect2(0, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_t58kc"]
atlas = ExtResource("8_irctk")
region = Rect2(18, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_sf8h1"]
atlas = ExtResource("9_fpauw")
region = Rect2(0, 0, 15, 23)

[sub_resource type="LabelSettings" id="LabelSettings_t58kc"]
font = ExtResource("10_kur3p")

[sub_resource type="LabelSettings" id="LabelSettings_sf8h1"]
font = ExtResource("3_e4xnj")

[sub_resource type="LabelSettings" id="LabelSettings_7plow"]
font = ExtResource("6_vqswr")

[sub_resource type="LabelSettings" id="LabelSettings_4w3xs"]
font = ExtResource("12_kbo01")

[sub_resource type="LabelSettings" id="LabelSettings_ynypu"]
line_spacing = 1.0
font = ExtResource("13_anb8u")

[sub_resource type="LabelSettings" id="LabelSettings_hpkte"]
font = ExtResource("10_kur3p")

[sub_resource type="LabelSettings" id="LabelSettings_giw0b"]
font = ExtResource("10_kur3p")

[sub_resource type="LabelSettings" id="LabelSettings_2654u"]
line_spacing = 0.0
font = ExtResource("13_anb8u")

[sub_resource type="LabelSettings" id="LabelSettings_wwfm3"]
line_spacing = 0.0
font = ExtResource("6_vqswr")

[sub_resource type="LabelSettings" id="LabelSettings_qvbyl"]
line_spacing = 0.0
font = ExtResource("13_anb8u")

[sub_resource type="LabelSettings" id="LabelSettings_bcl5g"]
line_spacing = 0.0
font = ExtResource("6_vqswr")

[sub_resource type="AtlasTexture" id="AtlasTexture_8x81e"]
atlas = ExtResource("12_73g5n")
region = Rect2(0, 0, 176, 35)

[sub_resource type="LabelSettings" id="LabelSettings_vqswr"]
font = ExtResource("14_gwqpq")

[sub_resource type="LabelSettings" id="LabelSettings_am7kc"]
font = ExtResource("10_kur3p")

[sub_resource type="LabelSettings" id="LabelSettings_73g5n"]
font = ExtResource("3_e4xnj")

[node name="gun_info_panel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 305.0
offset_bottom = 232.0
theme = ExtResource("1_q06lk")
script = ExtResource("2_73g5n")

[node name="data" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="bando_sel" type="Panel" parent="data"]
layout_mode = 0
offset_right = 208.0
offset_bottom = 18.0

[node name="bando_title" type="Label" parent="data/bando_sel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 3.0
offset_right = 38.0
offset_bottom = 2.0
grow_vertical = 2
text = "BANDO"
label_settings = SubResource("LabelSettings_6w61b")

[node name="guns" type="HBoxContainer" parent="data/bando_sel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="panel_gun_sel" parent="data/bando_sel/guns" instance=ExtResource("4_2jdfv")]
layout_mode = 2

[node name="panel_gun_sel2" parent="data/bando_sel/guns" instance=ExtResource("4_2jdfv")]
layout_mode = 2

[node name="gunbag_sel" type="Panel" parent="data"]
layout_mode = 0
offset_top = 18.0
offset_right = 208.0
offset_bottom = 36.0

[node name="gunbag_title" type="Label" parent="data/gunbag_sel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 3.0
offset_right = 38.0
offset_bottom = 2.0
grow_vertical = 2
text = "GUNBAG"
label_settings = SubResource("LabelSettings_6w61b")

[node name="guns" type="HBoxContainer" parent="data/gunbag_sel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="gun_map" type="Panel" parent="data"]
layout_mode = 0
offset_left = 216.0
offset_right = 280.0
offset_bottom = 64.0

[node name="gun_map_text" type="TextureRect" parent="data/gun_map"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 2

[node name="gun_marker_bottom" type="TextureRect" parent="data/gun_map/gun_map_text"]
layout_mode = 0
offset_left = -4.0
offset_top = -4.0
offset_right = 5.0
offset_bottom = 5.0
pivot_offset = Vector2(4, 4)
texture = SubResource("AtlasTexture_tn1ex")

[node name="gun_marker_top" type="TextureRect" parent="data/gun_map/gun_map_text"]
layout_mode = 0
offset_left = -4.0
offset_top = -4.0
offset_right = 5.0
offset_bottom = 5.0
pivot_offset = Vector2(4, 4)
texture = SubResource("AtlasTexture_iyqur")

[node name="gun_marker_occupied" type="TextureRect" parent="data/gun_map/gun_map_text"]
layout_mode = 0
offset_left = -4.0
offset_top = -4.0
offset_right = 5.0
offset_bottom = 5.0
pivot_offset = Vector2(4, 4)
texture = SubResource("AtlasTexture_t58kc")

[node name="gun_data" type="Control" parent="data"]
anchors_preset = 0
offset_top = 40.0
offset_right = 208.0
offset_bottom = 64.0

[node name="gun_bullet" type="Panel" parent="data/gun_data"]
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0

[node name="gun_bullet_text" type="TextureRect" parent="data/gun_data/gun_bullet"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.5
offset_top = -11.5
offset_right = 7.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_sf8h1")

[node name="gun_dmg" type="Panel" parent="data/gun_data"]
layout_mode = 0
offset_left = 24.0
offset_right = 64.0
offset_bottom = 24.0

[node name="dmg_title" type="Label" parent="data/gun_data/gun_dmg"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 2.0
offset_bottom = 9.0
grow_horizontal = 2
text = "DMG"
label_settings = SubResource("LabelSettings_t58kc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="dmg_value" type="Label" parent="data/gun_data/gun_dmg"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -18.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
text = "9"
label_settings = SubResource("LabelSettings_sf8h1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="gun_rte" type="Panel" parent="data/gun_data"]
layout_mode = 0
offset_left = 64.0
offset_right = 104.0
offset_bottom = 24.0

[node name="rte_title" type="Label" parent="data/gun_data/gun_rte"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 2.0
offset_bottom = 9.0
grow_horizontal = 2
text = "RTE"
label_settings = SubResource("LabelSettings_t58kc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="rte_value" type="Label" parent="data/gun_data/gun_rte"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -18.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
text = "9"
label_settings = SubResource("LabelSettings_sf8h1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="gun_spc" type="Panel" parent="data/gun_data"]
layout_mode = 0
offset_left = 104.0
offset_right = 128.0
offset_bottom = 24.0

[node name="spc_title" type="Label" parent="data/gun_data/gun_spc"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 2.0
offset_bottom = 9.0
grow_horizontal = 2
text = "SPC"
label_settings = SubResource("LabelSettings_t58kc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="spc_value" type="Label" parent="data/gun_data/gun_spc"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -18.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
text = "9"
label_settings = SubResource("LabelSettings_sf8h1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="gun_cap" type="Panel" parent="data/gun_data"]
layout_mode = 0
offset_left = 128.0
offset_right = 208.0
offset_bottom = 24.0

[node name="cap_title" type="Label" parent="data/gun_data/gun_cap"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 2.0
offset_bottom = 9.0
grow_horizontal = 2
text = "CAPACITY"
label_settings = SubResource("LabelSettings_t58kc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="cap_value" type="Label" parent="data/gun_data/gun_cap"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -18.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
text = "09 (69)"
label_settings = SubResource("LabelSettings_sf8h1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="more_gun_data" type="Control" parent="data"]
anchors_preset = 0
offset_top = 72.0
offset_right = 280.0
offset_bottom = 144.0

[node name="gun_texture" type="Panel" parent="data/more_gun_data"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 72.0

[node name="gun_texture" type="TextureRect" parent="data/more_gun_data/gun_texture"]
self_modulate = Color(1, 1, 1, 0.75)
custom_minimum_size = Vector2(49, 24)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(24.5, 0)

[node name="gun_name_value" type="Label" parent="data/more_gun_data/gun_texture"]
layout_mode = 0
offset_left = 2.0
offset_right = 64.0
offset_bottom = 18.0
text = "STEEL UNDEFINED"
label_settings = SubResource("LabelSettings_7plow")
script = ExtResource("11_kbkgw")

[node name="pts_value" type="Label" parent="data/more_gun_data/gun_texture"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -18.0
offset_right = -63.0
grow_horizontal = 2
grow_vertical = 0
text = "50"
label_settings = SubResource("LabelSettings_4w3xs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="wgt_value" type="Label" parent="data/more_gun_data/gun_texture"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 63.0
offset_top = -18.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 0
text = "9ç"
label_settings = SubResource("LabelSettings_4w3xs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="affix1" type="Panel" parent="data/more_gun_data"]
layout_mode = 0
offset_left = 80.0
offset_right = 280.0
offset_bottom = 24.0

[node name="affix_name_1" type="Label" parent="data/more_gun_data/affix1"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 50.0
offset_bottom = 22.0
text = "Affix Name"
label_settings = SubResource("LabelSettings_ynypu")
autowrap_mode = 3

[node name="affix_description_1" type="Label" parent="data/more_gun_data/affix1"]
self_modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 0
offset_left = 51.0
offset_top = 2.0
offset_right = 199.0
offset_bottom = 22.0
text = "Affix Description"
label_settings = SubResource("LabelSettings_ynypu")
horizontal_alignment = 1
autowrap_mode = 3

[node name="affix2" type="Panel" parent="data/more_gun_data"]
layout_mode = 0
offset_left = 80.0
offset_top = 24.0
offset_right = 280.0
offset_bottom = 48.0

[node name="affix_name_2" type="Label" parent="data/more_gun_data/affix2"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 50.0
offset_bottom = 22.0
text = "Affix Name"
label_settings = SubResource("LabelSettings_ynypu")
autowrap_mode = 3

[node name="affix_description_2" type="Label" parent="data/more_gun_data/affix2"]
self_modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 0
offset_left = 51.0
offset_top = 2.0
offset_right = 199.0
offset_bottom = 22.0
text = "Affix Description"
label_settings = SubResource("LabelSettings_ynypu")
horizontal_alignment = 1
autowrap_mode = 3

[node name="affix3" type="Panel" parent="data/more_gun_data"]
layout_mode = 0
offset_left = 80.0
offset_top = 48.0
offset_right = 280.0
offset_bottom = 72.0

[node name="affix_name_3" type="Label" parent="data/more_gun_data/affix3"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 50.0
offset_bottom = 22.0
text = "Affix Name"
label_settings = SubResource("LabelSettings_ynypu")
autowrap_mode = 3

[node name="affix_description_3" type="Label" parent="data/more_gun_data/affix3"]
self_modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 0
offset_left = 51.0
offset_top = 2.0
offset_right = 199.0
offset_bottom = 22.0
text = "Affix Description"
label_settings = SubResource("LabelSettings_ynypu")
horizontal_alignment = 1
autowrap_mode = 3

[node name="pts" type="Panel" parent="data/more_gun_data"]
layout_mode = 0
offset_top = 72.0
offset_right = 32.0
offset_bottom = 80.0

[node name="pts_title" type="Label" parent="data/more_gun_data/pts"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "PTS"
label_settings = SubResource("LabelSettings_hpkte")
horizontal_alignment = 1
vertical_alignment = 1

[node name="weight" type="Panel" parent="data/more_gun_data"]
layout_mode = 0
offset_left = 48.0
offset_top = 72.0
offset_right = 80.0
offset_bottom = 80.0

[node name="pts_title" type="Label" parent="data/more_gun_data/weight"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "WEIGHT"
label_settings = SubResource("LabelSettings_hpkte")
horizontal_alignment = 1
vertical_alignment = 1

[node name="affix" type="Panel" parent="data/more_gun_data"]
layout_mode = 0
offset_left = 80.0
offset_top = 72.0
offset_right = 112.0
offset_bottom = 80.0

[node name="afx_title" type="Label" parent="data/more_gun_data/affix"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "AFFIX"
label_settings = SubResource("LabelSettings_hpkte")
horizontal_alignment = 1
vertical_alignment = 1

[node name="gun_lineage" type="Control" parent="data"]
visible = false
anchors_preset = 0
offset_top = 161.0
offset_right = 40.0
offset_bottom = 201.0

[node name="lineage" type="Panel" parent="data/gun_lineage"]
layout_mode = 0
offset_left = 240.0
offset_top = -9.0
offset_right = 280.0
offset_bottom = -1.0

[node name="lineage_title" type="Label" parent="data/gun_lineage/lineage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.5
offset_top = -3.5
offset_right = 15.5
offset_bottom = 3.5
grow_horizontal = 2
grow_vertical = 2
text = "LINEAGE"
label_settings = SubResource("LabelSettings_giw0b")

[node name="gun_text_lineage_1" type="Panel" parent="data/gun_lineage"]
layout_mode = 0
offset_top = -1.0
offset_right = 64.0
offset_bottom = 23.0

[node name="gun_texture" type="TextureRect" parent="data/gun_lineage/gun_text_lineage_1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="wgt_value" type="Label" parent="data/gun_lineage/gun_text_lineage_1"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 37.0
offset_top = -18.0
offset_right = -3.0
grow_horizontal = 2
grow_vertical = 0
text = "9ç"
label_settings = SubResource("LabelSettings_4w3xs")
horizontal_alignment = 2
vertical_alignment = 1

[node name="gun_name_lineage_1" type="Panel" parent="data/gun_lineage"]
layout_mode = 0
offset_left = 64.0
offset_top = -1.0
offset_right = 280.0
offset_bottom = 23.0

[node name="daddy_cont" type="HBoxContainer" parent="data/gun_lineage/gun_name_lineage_1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="prefix_1_label" type="Label" parent="data/gun_lineage/gun_name_lineage_1/daddy_cont"]
layout_mode = 2
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_2654u")
vertical_alignment = 2

[node name="prefix_2_label" type="Label" parent="data/gun_lineage/gun_name_lineage_1/daddy_cont"]
layout_mode = 2
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_2654u")
vertical_alignment = 2

[node name="name_label" type="Label" parent="data/gun_lineage/gun_name_lineage_1/daddy_cont"]
layout_mode = 2
size_flags_vertical = 0
text = "Not implemented"
label_settings = SubResource("LabelSettings_wwfm3")
horizontal_alignment = 1
vertical_alignment = 2
script = ExtResource("11_kbkgw")

[node name="suffix_label" type="Label" parent="data/gun_lineage/gun_name_lineage_1/daddy_cont"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_2654u")
vertical_alignment = 2
autowrap_mode = 2

[node name="gun_text_lineage_2" type="Panel" parent="data/gun_lineage"]
layout_mode = 0
offset_top = 23.0
offset_right = 64.0
offset_bottom = 47.0

[node name="gun_texture" type="TextureRect" parent="data/gun_lineage/gun_text_lineage_2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="wgt_value" type="Label" parent="data/gun_lineage/gun_text_lineage_2"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 37.0
offset_top = -18.0
offset_right = -3.0
grow_horizontal = 2
grow_vertical = 0
text = "9ç"
label_settings = SubResource("LabelSettings_4w3xs")
horizontal_alignment = 2
vertical_alignment = 1

[node name="gun_name_lineage_2" type="Panel" parent="data/gun_lineage"]
layout_mode = 0
offset_left = 64.0
offset_top = 23.0
offset_right = 280.0
offset_bottom = 47.0

[node name="mommy_cont" type="HBoxContainer" parent="data/gun_lineage/gun_name_lineage_2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="prefix_1_label" type="Label" parent="data/gun_lineage/gun_name_lineage_2/mommy_cont"]
layout_mode = 2
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_qvbyl")
vertical_alignment = 2

[node name="prefix_2_label" type="Label" parent="data/gun_lineage/gun_name_lineage_2/mommy_cont"]
layout_mode = 2
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_qvbyl")
vertical_alignment = 2

[node name="name_label" type="Label" parent="data/gun_lineage/gun_name_lineage_2/mommy_cont"]
layout_mode = 2
size_flags_vertical = 0
text = "Not implemented"
label_settings = SubResource("LabelSettings_bcl5g")
horizontal_alignment = 1
vertical_alignment = 2
script = ExtResource("11_kbkgw")

[node name="suffix_label" type="Label" parent="data/gun_lineage/gun_name_lineage_2/mommy_cont"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_qvbyl")
vertical_alignment = 2
autowrap_mode = 2

[node name="smelt" type="Control" parent="data"]
layout_mode = 3
anchors_preset = 0
offset_left = 88.0
offset_top = 168.0
offset_right = 280.0
offset_bottom = 208.0

[node name="smelt_panel" type="Panel" parent="data/smelt"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 40.0

[node name="smelt_gauge" type="TextureRect" parent="data/smelt/smelt_panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -18.0
offset_right = 88.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_8x81e")

[node name="smelt_title" type="TextureRect" parent="data/smelt/smelt_panel"]
layout_mode = 0
offset_left = 77.0
offset_top = 22.0
offset_right = 121.0
offset_bottom = 37.0
texture = ExtResource("13_e4xnj")

[node name="smelt_value" type="Label" parent="data/smelt/smelt_panel"]
layout_mode = 0
offset_left = 31.0
offset_top = 22.0
offset_right = 72.0
offset_bottom = 38.0
text = "420"
label_settings = SubResource("LabelSettings_vqswr")
horizontal_alignment = 2

[node name="smelt_cost_value" type="Label" parent="data/smelt/smelt_panel"]
layout_mode = 0
offset_left = 117.0
offset_top = 22.0
offset_right = 184.0
offset_bottom = 38.0
text = "- 99"
label_settings = SubResource("LabelSettings_vqswr")
horizontal_alignment = 2

[node name="smelt_title" type="Panel" parent="data/smelt"]
layout_mode = 0
offset_left = 152.0
offset_top = -8.0
offset_right = 192.0

[node name="smelt_title" type="Label" parent="data/smelt/smelt_title"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "SMELT"
label_settings = SubResource("LabelSettings_am7kc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="no_data" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="title" type="Panel" parent="no_data"]
layout_mode = 0
offset_right = 208.0
offset_bottom = 18.0

[node name="title_value" type="Label" parent="no_data/title"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 0
offset_left = 2.0
offset_right = 206.0
offset_bottom = 20.0
text = "BAG"
label_settings = SubResource("LabelSettings_73g5n")

[node name="flavor_text" type="Panel" parent="no_data"]
layout_mode = 0
offset_top = 23.0
offset_right = 208.0
offset_bottom = 59.0

[node name="flavor_value" type="Label" parent="no_data/flavor_text"]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 206.0
offset_bottom = 35.0
text = "No gunsbag guns."
label_settings = SubResource("LabelSettings_73g5n")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
